--- a/index.html
+++ b/index.html
@@ -12,13 +12,37 @@
 
     <style>
         body {
-            background-color: rebeccapurple;
+            background-color: rgb(50, 50, 50);
             margin: 0 auto;
         }
 
-        svg {
-            background-color: darkmagenta;
-            margin: 0 auto;
+        .city {
+            fill: #ccc;
+            stroke: #fff;
+        }
+
+        .city.good {
+            fill: #00ff00;
+        }
+
+        .city.moderate {
+            fill: #ffff00;
+        }
+
+        .city.unhealthy-sensitive {
+            fill: #ff7e00;
+        }
+
+        .city.unhealthy {
+            fill: #ff0000;
+        }
+
+        .city.very-unhealthy {
+            fill: #8f3f97;
+        }
+
+        .city.hazardous {
+            fill: #7e0023;
         }
     </style>
 
@@ -29,7 +53,7 @@
     <script>
 
         var width = 960;
-        var height = 500;
+        var height = 600;
 
         var projection = d3.geo.albers();
 
@@ -75,30 +99,45 @@
                     .enter()
                     .append("circle");
 
-                cities.attr("cx", function (d) {
-                    return projection([d.Longitude, d.Latitude])[0];
-                })
-                    .attr("cy", function (d) {
-                        return projection([d.Longitude, d.Latitude])[1];
-                    })
-                    .attr("r", 4) // Set the circle's radius
-                    .attr("fill", "red") // Set the circle's color
-                    .attr("opacity", 0.8) // Set the circle's opacity
-                    .attr("background-color", "white")
+                cities.attr("cx", function (d) { return projection([d.Longitude, d.Latitude])[0]; })
+                    .attr("cy", function (d) { return projection([d.Longitude, d.Latitude])[1]; })
+                    .attr("r", 4)
+                    // .attr("background-color", "white")
                     .on("click", function (d) {
                         var city = d.City.toLowerCase();
                         var cityData = pollution_data.filter(function (cityAQ) {
                             return cityAQ.City.toLowerCase() === city;
                         });
-                        console.log(cityData);
+                        console.log(cityData[0]["AQI Category"]);
                         console.log(city);
-
+                    })
+                    .attr("class", function (d) {
+                        var city = d.City.toLowerCase();
+                        var cityData = pollution_data.filter(function (cityAQ) {
+                            return cityAQ.City.toLowerCase() === city;
+                        });
+                        var category = getAQICategory(cityData[0]["AQI Category"]);
+                        return "city " + category;
                     });
 
             })
         })
 
-
+        function getAQICategory(aqiCategory) {
+            if (aqiCategory === "Good") {
+                return "good";
+            } else if (aqiCategory === "moderate") {
+                return "moderate";
+            } else if (aqiCategory === "Unhealthy for Sensitive Groups") {
+                return "unhealthy-sensitive";
+            } else if (aqiCategory === "unhealthy") {
+                return "unhealthy";
+            } else if (aqiCategory === "very unhealthy") {
+                return "very-unhealthy";
+            } else {
+                return "hazardous";
+            }
+        }
 
     </script>
 
