--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
 
         var svg = d3.select("body").append("svg")
             .attr("width", width)
-            .attr("height", height);
+            .attr("height", height)
+            .call(d3.behavior.zoom().scaleExtent([0.3, 5]).on("zoom", onZoom));
+
+        var scale = d3.scale.linear().domain([50000, 800000]).range([0, 6]);
 
         // Drawing map and states on svg
 
@@ -122,6 +125,29 @@
 
             })
         })
+
+        // Zoom capabilty
+
+        var zoom = d3.behavior
+            .zoom()
+            .translate(projection.translate())
+            .scale(projection.scale())
+            .scaleExtent([height, 20 * height])
+            .on("zoom", onZoom);
+
+        var g = svg.append("g").call(zoom);
+
+        function onZoom() {
+            svg.attr(
+                "transform",
+                "translate (" +
+                d3.event.translate +
+                ") scale (" +
+                d3.event.scale +
+                ")"
+            );
+        }
+
 
         function getAQICategory(aqiCategory) {
             if (aqiCategory === "Good") {
