--- a/KV2-graph/index.html
+++ b/KV2-graph/index.html
@@ -12,15 +12,9 @@
 </head>
 <body>
     
-    <div id="map">
-        <h1>USA Pollution Map</h1>
-    </div>
-
     <svg width="600" height="400"></svg>
 
-    <script src="scripts/visualize.js"></script>
-
-    
+    <script src="script.js"></script>
 
 </body>
 </html>
