--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 </head>
 <body>
     
-    <div>
-        <h1>USA Pollution Map</h1>
-        <svg id="map" width="1200" height="800"></svg>
-    </div>
+    <h1>USA Pollution Map</h1>
+    <svg id="map"></svg>
+
 
     <script src="./scripts/visualize.js"></script>
 
